{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Movement",
            "id": "14a5f4ec-fdde-4c62-bf71-47abf4d9c0b6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "295ae0ea-df9c-4d9e-946f-ca104e3e2cc6",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MoveA",
                    "type": "Button",
                    "id": "dcdd2881-f2f3-4815-a382-35e684011b52",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "MoveB",
                    "type": "Button",
                    "id": "cb75d3cb-8457-4a19-8e49-b369f1d5dedb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "BasicAttack",
                    "type": "Button",
                    "id": "31e8272b-9ad1-461c-a33c-c7411015a2ee",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "AimMove",
                    "type": "Value",
                    "id": "b93e5996-2034-44f5-80d8-591c88aed7ea",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "UniteMove",
                    "type": "Button",
                    "id": "4b467cb6-6650-4779-b886-c931e7143ea7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Score",
                    "type": "Button",
                    "id": "49a3dcf1-80bd-4793-a6d3-ee8f5a870fae",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "82cd5df1-8738-47c6-a113-8a55ec52ee45",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d2ca503-6876-46ba-b100-830c7c2779c2",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveA",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7f44f620-e5d8-4b8a-a749-54883fd6f7a5",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MoveB",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3de4ecc0-e8e1-4112-9f04-e0675d575f9e",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60db12c8-c17b-4d4c-b388-3b06821bd8d9",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AimMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "40f00e1b-bdbf-42b2-9870-ba1d40de6be9",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UniteMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27031f69-af24-45cd-ba30-7865a3f9be2f",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Score",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "LearnMove",
            "id": "408931ae-80f5-4e61-bb67-3e7851eae6a2",
            "actions": [
                {
                    "name": "Move1",
                    "type": "Button",
                    "id": "62cf7c61-c07d-4f35-a18d-4b340347ef3d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move2",
                    "type": "Button",
                    "id": "2a176320-5752-4cad-9a09-7563a1972267",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Move3",
                    "type": "Button",
                    "id": "3064c63e-edda-470f-9ca5-b5575528e2a0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "38d13a69-2885-4a64-824a-090007a9c7f4",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "07376092-5994-4a70-bde2-a7c3a9a0543b",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb6fcd15-c263-4091-9294-ebabfd8d2e09",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move3",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}